--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+EditorStartupMap=/Game/Levels/FirstPersonExampleMap.FirstPersonExampleMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
@@ -24,10 +24,10 @@ MinimumiOSVersion=IOS_9
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/TestingGrounds")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/TestingGrounds")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/TestingGrounds")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="TestingGroundsProjectile")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="BallProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="TestingGroundsHUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="TestingGroundsGameMode")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="TestingGroundsCharacter")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="FirstPersonCharacter")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -79,5 +79,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
